[project]
name = "projecta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama",
    "pydantic",
    "pydantic-ai",
    "requests",
    "duckduckgo-search",
    "beautifulsoup4",
    "lxml",
    "aiohttp",
    "asyncio",
    "typing-extensions",
    "numpy>=1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "gradio>=5.0.0",
    "chatterbox-tts @ file:///Users/suryakulandaivelu/github/projectA/chatterbox"
]
