[project]
name = "stream-chat"
version = "1.0.0"
description = "AI chat application powered by Pydantic AI and Ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.0.16",
    "pydantic>=2.10.5",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "graphiti-core",
    "nest_asyncio",
]

[project.scripts]
stream-chat = "stream_chat:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"